[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-autogen"
version = "0.1.1"
description = "Drop-in Tessera integration for AutoGen (autogen_core / autogen_agentchat / autogen_ext). One line of config routes your AutoGen agents' LLM calls through Tessera's auto-route + auto-cache + auto-compress + auto-batch proxy. Free 60M tokens/mo. Production: 20% of measured savings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Tessera (Fintechagency OÜ)", email = "contact@tesseraai.io" }
]
keywords = [
  "tessera",
  "autogen",
  "autogen-core",
  "autogen-agentchat",
  "agent-framework",
  "multi-agent",
  "llm",
  "openai",
  "anthropic",
  "cost-optimization",
  "ai-cost",
  "llm-cost",
  "llm-proxy",
  "gpt-4o",
  "claude",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
autogen = ["autogen-core>=0.4.0", "autogen-ext[openai,anthropic]>=0.4.0"]
test = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://tesseraai.io"
Documentation = "https://tesseraai.io/docs"
Repository = "https://github.com/tessera-llm/tessera-autogen"
Issues = "https://github.com/tessera-llm/tessera-autogen/issues"
Changelog = "https://github.com/tessera-llm/tessera-autogen/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["tessera_autogen"]

[tool.hatch.build.targets.sdist]
include = ["tessera_autogen", "tests", "README.md", "CHANGELOG.md", "LICENSE"]
